--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,9 +82,9 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5'
 
     implementation 'com.squareup.retrofit2:retrofit:2.8.1'
-    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
 
-    implementation 'org.kodein.di:kodein-di-generic-jvm:5.2.0'
+    implementation 'org.kodein.di:kodein-di-generic-jvm:6.5.3'
     implementation 'org.kodein.di:kodein-di-framework-android-x:6.5.3'
 
     implementation 'com.jakewharton.threetenabp:threetenabp:1.2.2'
@@ -94,6 +94,8 @@ dependencies {
 
     implementation 'androidx.preference:preference:1.1.0'
     implementation 'androidx.preference:preference-ktx:1.1.0'
+
+    debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
