--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,27 +76,31 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.0.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.0.0'
 
-    implementation 'com.google.code.gson:gson:2.8.6'
-
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5'
 
+    // FETCH TO JSON
     implementation 'com.squareup.retrofit2:retrofit:2.8.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
+    implementation 'com.google.code.gson:gson:2.8.6'
 
+    // DEPENDENCY INJECTION
     implementation 'org.kodein.di:kodein-di-generic-jvm:6.5.3'
     implementation 'org.kodein.di:kodein-di-framework-android-x:6.5.3'
 
+    // TIMING
     implementation 'com.jakewharton.threetenabp:threetenabp:1.2.2'
 
+    // PICTURE
+    implementation 'com.airbnb.android:lottie:3.4.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
-    implementation 'androidx.preference:preference:1.1.0'
-    implementation 'androidx.preference:preference-ktx:1.1.0'
-
+    // ROOM DEBUG
     debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
 
+    implementation 'androidx.preference:preference:1.1.0'
+    implementation 'androidx.preference:preference-ktx:1.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
