--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.speter97.weatherforecast">
 
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -11,13 +12,14 @@
     <application
         android:allowBackup="true"
         android:name=".ForecastApplication"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/app_icon"
+        android:roundIcon="@mipmap/app_icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light"
         android:networkSecurityConfig="@xml/network_security_config">
         <!-- android:allowBackup="false"  -->
+
         <activity
             android:name=".ui.MainActivity"
             android:label="@string/app_name">
@@ -26,6 +28,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
