--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,8 +4,6 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: "androidx.navigation.safeargs"
 
-
-
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
@@ -68,15 +66,14 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
 
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation "android.arch.lifecycle:extensions:2.2.0"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.navigation:navigation-fragment:2.2.1'
     implementation 'androidx.navigation:navigation-ui:2.2.1'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.2.1'
     implementation 'androidx.navigation:navigation-ui-ktx:2.2.1'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
-
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5'
 
@@ -89,7 +86,7 @@ dependencies {
     implementation 'org.kodein.di:kodein-di-generic-jvm:6.5.3'
     implementation 'org.kodein.di:kodein-di-framework-android-x:6.5.3'
 
-    // TIMING
+    // TIME PARSING
     implementation 'com.jakewharton.threetenabp:threetenabp:1.2.2'
 
     // PICTURE
@@ -97,11 +94,19 @@ dependencies {
 
     // ROOM DEBUG
     debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
+    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
 
+
+    // retrofit
+    testImplementation 'com.squareup.retrofit2:retrofit:2.8.1'
+    testImplementation 'com.squareup.retrofit2:converter-gson:2.8.1'
 
     implementation 'androidx.preference:preference:1.1.0'
     implementation 'androidx.preference:preference-ktx:1.1.0'
     testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'junit:junit:4.12'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'androidx.test:rules:1.2.0'
 }
