--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="com.speter97.weatherforecast">
 
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -17,8 +16,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light"
-        android:networkSecurityConfig="@xml/network_security_config">
-        <!-- android:allowBackup="false"  -->
+        android:usesCleartextTraffic="true">
+    <!-- android:allowBackup="false"  -->
 
         <activity
             android:name=".ui.MainActivity"
